--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,13 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Assignments</h1>
+<h1>Requesting Assignments</h1>
 
 <div id="assignments">
   <% @assignments.each do |assignment| %>
     <%= render assignment %>
-    <p>
-      <%= link_to "Show this assignment", assignment %>
-    </p>
   <% end %>
 </div>
 
