--- a/app/views/assignments/_assignment.html.erb
+++ b/app/views/assignments/_assignment.html.erb
@@ -1,12 +1,13 @@
-<div id="<%= dom_id assignment %>">
-  <p>
-    <strong>Description:</strong>
-    <%= assignment.description %>
-  </p>
-
-  <p>
-    <strong>Resolved:</strong>
-    <%= assignment.resolved %>
-  </p>
-
+<div class="cards">
+<!--div class="cards <%= 'resolved' if assignment.resolved %>"-->
+  <%= button_to '', assignment, method: :patch, class: "fas fa-check btn resolved-btn #{'active' if assignment.resolved}" %>
+  <div class="cards-info">
+    <h3 class="assignment">
+      <%= assignment.description %>
+    </h3>
+    <p class="time">
+      <%= l assignment.created_at, format: :custom %>
+    </p>
+  </div>
+  <%= button_to '', assignment, method: :delete, class: 'fas fa-times btn delete-btn' %>
 </div>
