--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@ body {
 input,
 textarea,
 button {
-  background: hsla(220, 8%, 93%, 0.514);
+  background: #d0dcdc;
   border-radius: 0;
   font-size: 0.95rem;
 }
@@ -39,7 +39,7 @@ main {
 #tarefas {
   position: relative;
   display: grid;
-  background: hwb(176 89% 5% / 0.514);
+  background: #ffffff;
   box-shadow: 0 10px 80px #0000003d;
   border-radius: 1rem;
   overflow-y: hidden;
@@ -63,7 +63,7 @@ header {
 
 #input .submit-btn {
   padding: 5px 15px;
-  background: #139a968f;
+  background: #484c4c8f;
   border-radius: 1rem;
   cursor: pointer;
 }
@@ -98,7 +98,7 @@ header {
   align-items: center;
   gap: 15px;
   padding: 10px 20px;
-  border-bottom: 1px solid #1d920d50;
+  border-bottom: 1px solid #bbbdc750;
 }
 
 .cards-info {
@@ -155,3 +155,4 @@ header {
 .cards:hover .delete-btn {
   visibility: visible;
 }
+
